syntax = "proto3";

package protobuf;

message Committee {
	string ID = 1;
    string Name = 2;
    string TresName = 3;
	string City = 4;
    string State = 5;
    string Zip = 6;
	string Designation = 7;
    string Type = 8;
    string Party = 9;
    string FilingFreq = 10;
    string OrgType = 11;
    string ConnectedOrg = 12;
    string CandID = 13;
}